feat: product service inbox 패턴 구현 및 product reservation 기능 개선
- Product inbox 메시지 처리를 위한 repository, entity, mapper 추가
- ProductReservation 도메인 로직 개선
- ProductCustomRepository 기능 확장
- 스키마 및 설정 파일 업데이트